crates/macro-tools/tests/ui/builder/fail/reserved_build.rs
use picea_macro_tools::Builder;

#[derive(Builder)]
struct Meta {
    build: String,
}

fn main() {}
